# czcore

./: .gitignore  CMakeLists.txt  LICENSE  genvs2022.bat  genvs2026.bat
CMake/: utils.cmake
UnitTests/: CMakeLists.txt  CoreUnitTestsPch.h  FNVHashTests.cpp  FixedHeapArrayTests.cpp  HandlesTests.cpp  PolyChunkVectorTests.cpp  SharedPtrTests.cpp  StringUtilsTests.cpp  TaggedPtrTests.cpp  TestUtils.h  VSOVectorTests.cpp  Win32EventTests.cpp
sandbox/: CMakeLists.txt  sandbox.cpp  sandboxPch.h
source/: CMakeLists.txt
source/crazygaze/core/: Algorithm.h  Algorithm.ixx  AllMacros.h  AsyncCommandQueue.cpp  AsyncCommandQueue.ixx  CommandLine.cpp  CommandLine.h  CommandLine.ixx  Common.h  Common.ixx  Common_Macros.h  CorePch.h  CorePreSetup.h  FNVHash.ixx  File.cpp  File.h  File.ixx  FixedHeapArray.h  FixedHeapArray.ixx  Handles.h  Handles.ixx  IniFile.cpp  IniFile.h  IniFile.ixx  LinkedList.ixx  LocalSharedPtr.h  LogOutputs.cpp  LogOutputs.h  LogOutputs.ixx  Logging.cpp  Logging.h  Logging.ixx  Logging_Macros.h  Math.cpp  Math.h  Math.ixx  Misc.cpp  Misc.h  Misc.ixx  Misc_Macros.h  (+29 more)
source/crazygaze/core/TODO/: CommandLine.cpp  CommandLine.h  FNVHash.h  File.cpp  IniFile.h  LinkedList.h  LogOutputs.h  Misc.cpp  Misc.h  PlatformUtils.cpp  PlatformUtils.h  PolyChunkVector.h
source/crazygaze/core/TODO/Windows/: Win32Event.cpp  Win32Event.h
source/crazygaze/core/Windows/: Win32Event.cpp  Win32Event.ixx
source/crazygaze/core/details/: BasicSharedPtr.h  SmartPtrsHelper.h
